# windows-capture

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  STREAMING_FEATURE.md  obs.c  rustfmt.toml  test_implementation  test_windows_integration
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report-🪲.md  feature-request-⭐.md
.github/workflows/: build-windows-wheels.yml  python.yml  rust.yml
Python/WindowsCapture/: main.py
Python/windows-capture-native/: Cargo.toml  pyproject.toml
Python/windows-capture-native/src/: lib.rs
examples/: basic.rs  cli.rs  dxgi_duplication.rs  graphics_capture.rs  hello_world.rs  stream_capture.rs  streaming.rs
src/: buffer.rs  capture.rs  capture_ext.rs  d3d11.rs  dxgi_duplication_api.rs  encoder.rs  frame.rs  graphics_capture_api.rs  graphics_capture_picker.rs  lib.rs  monitor.rs  network.rs  settings.rs  window.rs  winrt.rs
windows-capture-python/: .gitignore  Cargo.toml  LICENCE  README-Python.md  README.md  pyproject.toml  rustfmt.toml
windows-capture-python/src/: lib.rs
windows-capture-python/windows_capture/: __init__.py  windows_capture.cp311-win_amd64.pyd  windows_capture.pyd
