[package]
name = "windows-capture"
version = "1.1.9"
authors = ["NiiightmareXD"]
edition = "2021"
description = "Fastest Windows Screen Capture Library For Rust 🔥"
documentation = "https://docs.rs/windows-capture"
readme = "README.md"
repository = "https://github.com/NiiightmareXD/windows-capture"
license = "MIT"
keywords = ["screen", "capture", "screenshot", "graphics", "windows"]
categories = [
    "os::windows-apis",
    "api-bindings",
    "graphics",
    "gui",
    "multimedia",
]
resolver = "2"

[dependencies]
# Windows API
windows = { version = "0.56.0", features = [
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Graphics_Direct3D11",
    "Win32_Foundation",
    "Graphics_Capture",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Gdi",
    "System",
    "Graphics_DirectX_Direct3D11",
    "Foundation_Metadata",
    "Win32_Devices_Display",
    "Storage",
    "Graphics_Imaging",
    "Storage_Streams",
    "Foundation",
    "Media_MediaProperties",
    "Media_Core",
    "Media_Transcoding",
    "Security_Cryptography",
] }

# Mutex optimization
parking_lot = "0.12.2"

# Multithreading
rayon = "1.10.0"

# Error handling
thiserror = "1.0.60"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[[example]]
name = "basic"
doc-scrape-examples = false

[workspace]
members = ["windows-capture-python"]
