[package]
name = "windows-capture"
version = "1.4.0"
authors = ["NiiightmareXD"]
edition = "2021"
description = "Fastest Windows Screen Capture Library For Rust 🔥"
documentation = "https://docs.rs/windows-capture"
readme = "README.md"
repository = "https://github.com/NiiightmareXD/windows-capture"
license = "MIT"
keywords = ["screenshot", "screen", "capture", "graphics", "windows"]
categories = [
    "api-bindings",
    "graphics",
    "gui",
    "multimedia",
    "os::windows-apis",
]
resolver = "2"

[dependencies]
# Windows API
windows = { version = "0.58.0", features = [
    "Foundation_Metadata",
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Media_Core",
    "Media_MediaProperties",
    "Media_Transcoding",
    "Security_Cryptography",
    "Storage_Streams",
    "Storage",
    "System",
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
] }

# Mutex optimization
parking_lot = "0.12.3"

# Multithreading
rayon = "1.10.0"

# Error handling
thiserror = "1.0.65"
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4.5"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[[example]]
name = "basic"
doc-scrape-examples = false

[[example]]
name = "cli"
doc-scrape-examples = false

[workspace]
members = ["windows-capture-python"]
