[package]
name = "windows-capture-python"
version = "2.0.0-alpha.7"
authors = ["NiiightmareXD"]
edition = "2021"
description = "Fastest Windows Screen Capture Library For Python 🔥"
readme = "README-Python.md"
repository = "https://github.com/NiiightmareXD/windows-capture/tree/main/windows-capture-python"
license = "MIT"
keywords = ["screen", "capture", "screenshot", "graphics", "windows"]
categories = [
    "os::windows-apis",
    "api-bindings",
    "graphics",
    "gui",
    "multimedia",
]

[lib]
name = "windows_capture"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = [
    "extension-module",
    "auto-initialize",
    "abi3",
    "abi3-py39",
] }
thiserror = "2.0.16"
windows = "0.62.1"
windows-capture = { path = ".." }
